CHATS_SIT/force-app/main/default/objects/batchsit_t_eligty_run_hist__x.object
<CustomObject>
    <description>batchsit$t_eligty_run_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>batchsit$t_eligty_run_hist</externalName>
    <fields>
        <fullName>cde_date_redet_ovrd__c</fullName>
        <description>cde_date_redet_ovrd</description>
        <externalDeveloperName>cde_date_redet_ovrd</externalDeveloperName>
        <label>Redetermination Date Override Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_eligty_cfmd__c</fullName>
        <description>cde_eligty_cfmd</description>
        <externalDeveloperName>cde_eligty_cfmd</externalDeveloperName>
        <label>Eligibility Confirmed Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_status_tfr__c</fullName>
        <description>cde_status_tfr</description>
        <externalDeveloperName>cde_status_tfr</externalDeveloperName>
        <label>Transfer Status Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>createdbyid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>createdbyid</description>
        <externalDeveloperName>createdbyid</externalDeveloperName>
        <label>Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>batchsit_t_eligty_run_hist1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>createddate__c</fullName>
        <description>createddate</description>
        <externalDeveloperName>createddate</externalDeveloperName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_change_last__c</fullName>
        <description>dte_change_last</description>
        <externalDeveloperName>dte_change_last</externalDeveloperName>
        <label>last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_created_hist__c</fullName>
        <description>dte_created_hist</description>
        <externalDeveloperName>dte_created_hist</externalDeveloperName>
        <label>History Creation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_redet_ovrd__c</fullName>
        <description>dte_redet_ovrd</description>
        <externalDeveloperName>dte_redet_ovrd</externalDeveloperName>
        <label>Redetermination Override Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_redet_prpsd__c</fullName>
        <description>dte_redet_prpsd</description>
        <externalDeveloperName>dte_redet_prpsd</externalDeveloperName>
        <label>Redetermination  Proposed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_run_eligty__c</fullName>
        <description>dte_run_eligty</description>
        <externalDeveloperName>dte_run_eligty</externalDeveloperName>
        <label>Eligibility Run Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>idn_case__c</fullName>
        <description>idn_case</description>
        <externalDeveloperName>idn_case</externalDeveloperName>
        <label>Case ID</label>
        <length>80</length>
        <referenceTargetField>T_SBSD_CASE__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_SBSD_CASE__c</referenceTo>
        <relationshipLabel>Eligbility Run Legacy History</relationshipLabel>
        <relationshipName>batchsit_t_eligty_run_hist</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>idn_run_eligty__c</fullName>
        <description>idn_run_eligty</description>
        <externalDeveloperName>idn_run_eligty</externalDeveloperName>
        <label>Eligibility Run ID</label>
        <length>18</length>
        <referenceTo>batchsit_t_eligty_run__x</referenceTo>
        <relationshipLabel>Eligibility Run Legacy History</relationshipLabel>
        <relationshipName>batchsit_t_eligty_run_hist</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>idn_run_eligty_hist__c</fullName>
        <description>idn_run_eligty_hist</description>
        <externalDeveloperName>idn_run_eligty_hist</externalDeveloperName>
        <label>Eligibility Run ID History</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_user_change_last__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>idn_user_change_last</description>
        <externalDeveloperName>idn_user_change_last</externalDeveloperName>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>batchsit_t_eligty_run_hist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ind_record_delete_logcl__c</fullName>
        <description>ind_record_delete_logcl</description>
        <externalDeveloperName>ind_record_delete_logcl</externalDeveloperName>
        <label>Logical Deleted Record</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nbr_seq_hist__c</fullName>
        <description>nbr_seq_hist</description>
        <externalDeveloperName>nbr_seq_hist</externalDeveloperName>
        <label>History Number Sequence</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>txt_cmt_ovrd__c</fullName>
        <description>txt_cmt_ovrd</description>
        <externalDeveloperName>txt_cmt_ovrd</externalDeveloperName>
        <label>Override Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Eligibility Run History</label>
    <pluralLabel>Eligibility Run History</pluralLabel>
</CustomObject>